# CarbonX

./: .gitignore  New Text Document.txt  README.md  deploy.sh  netlify.toml  package-lock.json  package.json
.github/workflows/: main.yml
contracts/: Cargo.toml
contracts/carbon-registry/: Cargo.toml
contracts/carbon-registry/src/: lib.rs
contracts/marketplace-contract/: Cargo.toml
contracts/marketplace-contract/src/: lib.rs
contracts/retirement-contract/: Cargo.toml
contracts/retirement-contract/src/: lib.rs
contracts/settlement-contract/: Cargo.toml
contracts/settlement-contract/src/: lib.rs
contracts/verification-contract/: Cargo.toml
contracts/verification-contract/src/: lib.rs  test.rs
contracts/verification-contract/test_snapshots/test/: test_full_carbon_marketplace_flow.1.json
frontend/: next.config.mjs  package-lock.json  package.json  vitest.config.mjs
frontend/__tests__/: page.test.jsx
frontend/src/app/: globals.css  layout.js  page.jsx
frontend/src/lib/: stellar.js
stitch_carbonx_institutional_marketplace/carbonx/: DESIGN.md
stitch_carbonx_institutional_marketplace/landing_page/: code.html
stitch_carbonx_institutional_marketplace/marketplace_terminal/: code.html
stitch_carbonx_institutional_marketplace/overview_dashboard/: code.html
stitch_carbonx_institutional_marketplace/retirement_center/: code.html
